# gpu_miner_btcw

./: CMakeLists.txt  README.md
src/: gpu_miner.cu  main.cu
